# restapi-axum-pos

./: ARCHITECTURE.md  Cargo.toml  REFACTORING.md  env.example  rustfmt.toml
migrations/: 0001_init.sql  0002_add_product_category_and_low_stock.sql  0003_add_categories.sql  0004_add_product_category_id.sql  0005_0005_add_audit_log_seq.sql
src/: app.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  pagination.rs  state.rs
src/audit/: handler.rs  mod.rs  model.rs  postgres.rs  repository.rs  service.rs
src/audit/storage/: inmemory.rs  postgres.rs
src/categories/: handler.rs  mod.rs  model.rs  postgres.rs  repository.rs  service.rs
src/categories/storage/: inmemory.rs  postgres.rs
src/customers/: handler.rs  mod.rs  model.rs  postgres.rs  repository.rs  service.rs
src/customers/storage/: inmemory.rs  postgres.rs
src/orders/: handler.rs  idempotency.rs  mod.rs  model.rs  postgres.rs  repository.rs  service.rs
src/orders/storage/: inmemory.rs  postgres.rs
src/products/: handler.rs  mod.rs  model.rs  postgres.rs  repository.rs  service.rs
src/products/storage/: inmemory.rs  postgres.rs
src/reports/: handler.rs  mod.rs  model.rs  service.rs
src/tenants/: handler.rs  mod.rs  model.rs  postgres.rs  repository.rs  service.rs
src/tenants/storage/: inmemory.rs  postgres.rs
src/users/: extractor.rs  handler.rs  jwt.rs  mod.rs  model.rs  postgres.rs  repository.rs  service.rs  session.rs
src/users/storage/: inmemory.rs  postgres.rs
tests/: api_test.rs  audit_test.rs  auth_test.rs  categories_test.rs  customers_test.rs  health_test.rs  orders_test.rs  products_test.rs  reports_test.rs  users_test.rs
tests/common/: mod.rs
