[package]
name = "restapi-axum-pos"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "sync",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "migrate",
  "macros",
  "json",
] }
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
ctor = "0.4"
