[package]
name = "restapi-axum-pos"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.53.1", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "sync",
] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
rand_core = "0.10.1"
async-trait = "0.1.91"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "migrate",
  "macros",
  "json",
] }
dotenvy = "0.15.7"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
ctor = "1.0.4"
